kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-echo
  labels:
    app: go-echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-echo
  template:
    metadata:
      labels:
        app: go-echo
    spec:
      containers:
        - name: go-echo-container
          image: asia-southeast1-docker.pkg.dev/kubernetes-cluster-252525/echo-application/go-echo:${IMAGE_TAG}
          ports:
            - containerPort: 8080
