kustomize/base/istio-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: go-echo-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: go-echo
spec:
  hosts:
    - "*"
  gateways:
    - go-echo-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: go-echo-service
            port:
              number: 80
